# farm-ng-core

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .ruff.toml  404.html  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  LICENSE.txt  README.md  READMEv2.md  ____init_____8py.html  ____init_____8py.js  affine_8h.html  affine_8h__dep__incl.map  affine_8h__dep__incl.md5  affine_8h__incl.map  affine_8h__incl.md5  affine_8h_source.html  annotated.html  annotated_dup.js  average_8h.html  average_8h.js  average_8h__dep__incl.map  average_8h__dep__incl.md5  average_8h__incl.map  average_8h__incl.md5  average_8h_source.html  backtrace_8cpp.html  backtrace_8cpp__incl.map  backtrace_8cpp__incl.md5  backtrace_8h.html  backtrace_8h__dep__incl.map  backtrace_8h__dep__incl.md5  backtrace_8h_source.html  base_8h.html  (+3110 more)
cmake/: .gitignore  ASan_blacklist.txt  CMakeLists.txt  External_expected.cmake  External_fmt.cmake  External_grpc.cmake  External_subdir_Sophus.cmake  External_subdir_farm-ng-core.cmake  External_subdir_farm_ng_core.cmake  LICENSE  README.md  bootstrap_venv.sh  farm_ng_add_library.cmake  farm_ng_add_protobufs.cmake  farm_ng_add_test.cmake  farm_ng_ccache.cmake  farm_ng_cmakeConfig.cmake  farm_ng_core-config.cmake  farm_ng_coreConfig.cmake.in  farm_ng_core_add_test.cmake  farm_ng_default_args.cmake  farm_ng_dev_packages.cmake  farm_ng_eigen.cmake  farm_ng_macos_ssl_fix.cmake  farm_ng_module.cmake  farm_ng_moduleConfig.cmake.in  farm_ng_modules.cmake  farm_ng_provider.cmake  fng_coreConfig.cmake.in  fng_core_add_test.cmake
cmake/cmake/: External_apriltag.cmake  External_boost.cmake  External_ceres.cmake  External_cli11.cmake  External_eigen.cmake  External_farm-ng-cmake.cmake  External_grpc.cmake  External_nlohmann_json.cmake  farm_ng_add_library.cmake  farm_ng_add_protobufs.cmake  farm_ng_default_args.cmake  farm_ng_module.cmake
cmake/scripts/: download_release.sh  install_deps_mac.sh  install_deps_ubuntu.sh
cpp/: .clang-tidy  CMakeLists.txt
cpp/cmake/: farm_ng_core_add_test.cmake
cpp/examples/test_install_targets/: CMakeLists.txt  compile_all.cpp  compile_all_proto.cpp
cpp/farm_ng/core/: CMakeLists.txt
cpp/sophus/: CMakeLists.txt  README.md
cpp/sophus/calculus/: CMakeLists.txt  region.h
cpp/sophus/ceres/: CMakeLists.txt  ceres_test.cpp
cpp/sophus/color/: CMakeLists.txt  color.cpp  color.h  color_test.cpp
cpp/sophus/common/: CMakeLists.txt  common.h
cpp/sophus/concepts/: CMakeLists.txt  division_ring_prop_tests.h  group_accessors_unit_tests.h  lie_group_prop_tests.h  manifold_prop_tests.h  params.h
cpp/sophus/geometry/: CMakeLists.txt  inverse_depth_test.cpp  plane_conv.h  ray_test.cpp
cpp/sophus/image/: CMakeLists.txt  image.h  image_size.h  image_view.h  layout.h  mut_image.h  mut_image_view.h  pixel_format.h
cpp/sophus/interp/: CMakeLists.txt  interpolate_test.cpp
cpp/sophus/lie/: CMakeLists.txt  group_manifold.h  isometry3.h  pose3.h  pose3_test.cpp
cpp/sophus/linalg/: CMakeLists.txt  batch.h  batch_test.cpp  homogeneous.h  homogeneous_test.cpp  reduce.h  vector_space_traits.h
cpp/sophus/manifold/: CMakeLists.txt  complex.h  complex_test.cpp  quaternion.h  unit_vector.h  unit_vector_test.cpp
cpp/sophus/sensor/: CMakeLists.txt  camera_model.h  camera_model_test.cpp  camera_rig.h  imu_model_test.cpp
cpp/sophus2/: CMakeLists.txt  README.md
cpp/sophus2/calculus/: CMakeLists.txt  num_diff.h  region.h  region_test.cpp
cpp/sophus2/ceres/: CMakeLists.txt  ceres_test.cpp  jet_helpers.h  manifold.h  manifold_test.cpp  typetraits.h
cpp/sophus2/color/: CMakeLists.txt  color.cpp  color.h  color_test.cpp
cpp/sophus2/common/: CMakeLists.txt  common.h  common_test.cpp  enum.h
cpp/sophus2/concepts/: CMakeLists.txt  batch.h  division_ring.h  division_ring_prop_tests.h  group_accessors.h  group_accessors_test.cpp  group_accessors_unit_tests.h  image.h  image_test.cpp  lie_group.h  lie_group_prop_tests.h  lie_group_test.cpp  manifold.h  manifold_prop_tests.h  manifold_test.cpp  params.h  params_test.cpp  point.h  point_test.cpp  utils.h  utils_test.cpp
cpp/sophus2/geometry/: CMakeLists.txt  fit_plane.h  fit_plane_test.cpp  inverse_depth.h  inverse_depth_test.cpp  plane_conv.h  plane_conv_test.cpp  point_transform.h  point_transform_test.cpp  ray.h  ray_test.cpp
cpp/sophus2/image/: CMakeLists.txt  dyn_image.cpp  dyn_image.h  dyn_image_test.cpp  dyn_image_types.cpp  dyn_image_types.h  dyn_image_types_test.cpp  dyn_image_view.cpp  dyn_image_view.h  dyn_image_view_test.cpp  image.cpp  image.h  image_size.cpp  image_size.h  image_size_test.cpp  (+28 more)
examples/test_install_targets/: CMakeLists.txt  compile_all.cpp
farm_ng_core/enum/: CMakeLists.txt  README.md  enum.h  enum_flags.h  enum_flags_test.cpp  enum_flags_without_ostream.h  enum_flags_without_ostream_test.cpp  enum_test.cpp  enum_without_ostream.h  enum_without_ostream_test.cpp
farm_ng_core/logging/: CMakeLists.txt  eigen.h  expected.cpp  expected.h  expected_test.cpp  format.cpp  format.h  format_test.cpp  logger.cpp  logger.h  logger_test.cpp
farm_ng_core/utils/: CMakeLists.txt  erase.cpp  erase.h  erase_test.cpp  filesystem.cpp  filesystem.h  filesystem_test.cpp  stopwatch.cpp  stopwatch.h  stopwatch_test.cpp  tokenize.cpp  tokenize.h  tokenize_test.cpp  uri.cpp  uri.h  uri_test.cpp  variant_utils.h  void.h
fng_core/enum/: CMakeLists.txt  enum.h  enum_flags.h  enum_flags_test.cpp  enum_flags_without_ostream.h  enum_flags_without_ostream_test.cpp  enum_test.cpp  enum_without_ostream.h  enum_without_ostream_test.cpp
fng_core/logging/: CMakeLists.txt  eigen.h  expected.h  expected_test.cpp  format.h  format_test.cpp  logger.h  logger_test.cpp
fng_core/utils/: CMakeLists.txt  erase.h  erase_test.cpp  filesystem.h  filesystem_test.cpp  stopwatch.h  stopwatch_test.cpp  tokenize.h  tokenize_test.cpp  variant_utils.h  void.h
python/: .gitignore  setup.cfg
python/farm_ng/: __init__.py
rs/: Cargo.toml  build.rs
rs/plotting/: Cargo.toml
rs/remote_plot/: Cargo.toml  build.rs
rs/src/: client.rs  server.rs
super_project/: CMakeLists.txt
(+834 files in other folders)
