[build-system]
requires = [
    "setuptools",
    "pybind11",
    "wheel",
    # farm-ng-package v0.1.4 locks protobuf/grpcio versions to those on Brain.
    # However, grpcio 1.56.2 contains Cython-generated code that is incompatible
    # with Python 3.12.
    # If this works, then we should yank v0.1.4 or update.
    "farm-ng-package==0.1.3",
    "grpcio-tools==1.64.1",
]
build-backend = "setuptools.build_meta"
