[metadata]
name = farm_ng_core
version = 0.1.5
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-core
download_url = https://github.com/farm-ng/farm-ng-core
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    farm-ng-package
    protobuf
    grpcio
    psutil

tests_require =
    pytest
    pytest-runner
    pytest-mypy
    pytest-asyncio
    pylint-protobuf
    types-protobuf

test_suite = tests

package_dir =
    = py
packages =
    farm_ng
    farm_ng.core

[options.extras_require]
dev =
    pytest==7.1.2
    pytest-mypy==0.9.1
    pytest-asyncio==0.21.1
    pre-commit==2.20.0
    mypy==0.971
    types-protobuf
    pylint
    grpcio-tools
    mypy-protobuf
    pylint-protobuf==0.20.2

[mypy]
files = py/farm_ng, py/tests
ignore_missing_imports = True
# types-protobuf fix: https://github.com/python/typeshed/issues/7519
namespace_packages = True

[options.package_data]
farm_ng.core =
    *.proto
