[metadata]
name = farm_ng_core
version = 2.3.2-dev
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-core
download_url = https://github.com/farm-ng/farm-ng-core
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.8
install_requires =
    farm_ng_package
    protobuf==5.27.2
    grpcio==1.64.1
    grpcio-tools==1.64.1
    psutil
    numpy

tests_require =
    pytest
    pytest-runner
    pytest-mypy
    pylint-protobuf
    types-protobuf
    anyio

test_suite = tests

package_dir =
    = py
packages =
    farm_ng
    farm_ng.core

[options.extras_require]
dev =
    pytest
    pytest-mypy
    pre-commit
    mypy
    types-protobuf
    pylint
    grpcio==1.64.1
    grpcio-tools==1.64.1
    mypy-protobuf
    pylint-protobuf
    anyio

[mypy]
files = py/farm_ng, py/tests
# exclude the generated protobuf files and the stubs
exclude = (_pb2\.py$|\.pyi$)
ignore_missing_imports = True
# types-protobuf fix: https://github.com/python/typeshed/issues/7519
namespace_packages = True
check_untyped_defs = True

[options.package_data]
farm_ng.core =
    *.proto
