[metadata]
name = farm_ng_core
version = 2.3.2
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-core
download_url = https://github.com/farm-ng/farm-ng-core
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.8

install_requires =
    grpcio
    protobuf<=5.27.5
    psutil
    numpy

package_dir =
    = py
packages =
    farm_ng
    farm_ng.core

[options.extras_require]
test =
    pytest
    pytest-mypy
    pytest-runner
    pylint-protobuf
    anyio
    types-protobuf
    grpcio-tools

dev =
    %(test)s
    pre-commit
    mypy
    pylint
    mypy-protobuf

[mypy]
files = py/farm_ng, py/tests
# exclude the generated protobuf files and the stubs
exclude = (_pb2\.py$|\.pyi$)
ignore_missing_imports = True
# types-protobuf fix: https://github.com/python/typeshed/issues/7519
namespace_packages = True
check_untyped_defs = True

[options.package_data]
farm_ng.core =
    *.proto
