[package]
name = "farm_ng_core"
version = "0.1.0"
authors = ["Edgar <edgar@farm-ng.com>"]
edition = "2021"

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.9"
